--- a/FileSharingApp/appsettings.json
+++ b/FileSharingApp/appsettings.json
@@ -9,8 +9,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=FileSharingDb;Integrated Security=True"
-      //,
+    "DefaultConnection": "Data Source=DESKTOP-4EJ39BQ;Initial Catalog=FileSharingDb;Integrated Security=True"
+    //,
     //"DefaultConnection": "Data Source=SQL5063.site4now.net;Initial Catalog=db_a7c557_filessharing;User Id=db_a7c557_filessharing_admin;Password=o3g8t0k7t9h9a8z5"
   },
   "Mail": {
